--- a/Pages/Home/index.html
+++ b/Pages/Home/index.html
@@ -4,111 +4,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="../assets/styles/style.css">
     <title>Fatebene</title>
 </head>
 
 <body>
-    <div id="interface">
 
-        <header class="cabecalho">
-            <nav class="menu">
-                <h1>Menu principal</h1>
-                <ul type="disc">
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Cursos</a>
-                    </li>
-                    <li>
-                        <a href="#">Artigos</a>
-                    </li>
-                    <li>
-                        <a href="#">Corpo Docente</a>
-                    </li>
 
-                    <li>
-                        <a href="#">Contato</a>
-                    </li>
+    <!-- NAVEGAÇÃO -->
+    <nav class="nav">
+        <div class="container flex--nav">
+            <div class="flex--nav container--menu">
+                <a href="index.html" class="active"><img src="../Img/icon/logo.png" alt="logo fatebene" title="logo fatebene"
+                        class="logo--nav"></a>
+                <ul class="flex--nav menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Cursos</a></li>
+                    <li><a href="artigo.html">Artigos</a></li>
+                    <li><a href="#">Corpo Docente</a></li>
                 </ul>
-            </nav>
-        </header>
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner h-25">
-                <div class="carousel-item active">
-                    <img class="d-block w-100 h-25" src="../Img/Matriculas.jpg" alt="Matriculas">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="../Img/Cursos.jpg" alt="cursos">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="../Img/Adol.jpg" alt="adolecentes" title="Adolecentes">
-                </div>
             </div>
         </div>
+    </nav>
 
-        <article class="mt-3 text-center container">
-            <h1>Fatebene</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi assumenda sapiente dolore
-                voluptatibus
-                officia magnam doloremque corrupti repudiandae cum, expedita libero nihil hic rem nulla id voluptatum
-                nam
-                dolorem impedit?</p>
-        </article>
-
-
-
-        <div class="card-group container mt-5 mb-5">
-            <div class="card">
-                <img class="card-img-top" src="../Img/Cursos.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
-                </div>
+    <header class="header--bg">
+        <div class="container flex--header">
+            <h1 class="header--titulo">Fatebene</h1>
+            <div class="subtitle-container flex">
+                <span class="line-subtitle"></span>
+                <h3 class="header--subtitulo">
+                    Venha fazer parte da Fatebene</h3>
+                <span class="line-subtitle"></span>
             </div>
-            <div class="card">
-                <img class="card-img-top" src="../Img/Adol.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="../Img/Matriculas.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This card has even longer content than the first to show that equal height action.</p>
-                </div>
-            </div>
-            <button type="button" class="btn btn-secondary btn-lg btn-block mt-3">Saiba Mais</button>
+            <button class="btn btn--header">Inscrições</button>
         </div>
-
-
-
-
-        <footer class="fh">
-            <div class="d-flex container justify-content-around">
-                <div class="text-end text-light ">
-                    <p class="mb-0">Rua fulano de tal, 50</p>
-                    <p class="mb-0">Bairro</p>
-                    <p class="mb-0">Cep</p>
-                    <p class="mb-0">Site</p>
-                </div>
-                <div class="rede-sociais">
-                    <a href=""><img src="../Img/icon/facebook (1).pnggit"></img></a>
-                    <a href=""><img src="../Img/icon/instagram.png"></img></a>
-                    <a href=""><img src="../Img/icon/email.png"></img></a>
-                </div>
+    </header>
+    <!-- 
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner h-25">
+            <div class="carousel-item active">
+                <img class="d-block w-100 h-25" src="../Img/Matriculas.jpg" alt="Matriculas">
             </div>
-        </footer>
-    </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="../Img/Cursos.jpg" alt="cursos">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="../Img/Adol.jpg" alt="adolecentes" title="Adolecentes">
+            </div>
+        </div>
+    </div> -->
+
+    <article class="mt-3 text-center container">
+        <h1>Fatebene</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi assumenda sapiente dolore
+            voluptatibus
+            officia magnam doloremque corrupti repudiandae cum, expedita libero nihil hic rem nulla id voluptatum
+            nam
+            dolorem impedit?</p>
+    </article>
+
+
+   
+
+    <footer class="fh">
+        <div class="d-flex container justify-content-around">
+            <div class="text-end text-light ">
+                <p class="mb-0">Rua fulano de tal, 50</p>
+                <p class="mb-0">Bairro</p>
+                <p class="mb-0">Cep</p>
+                <p class="mb-0">Site</p>
+            </div>
+            <div class="rede-sociais">
+                <a href=""><img src="../Img/icon/facebook (1).pnggit"></img></a>
+                <a href=""><img src="../Img/icon/instagram.png"></img></a>
+                <a href=""><img src="../Img/icon/email.png"></img></a>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
